<resources>
    <string name="app_name">AdoptionControlApp</string>
    <string name="contacts_title">Family</string>
    <string name="textview_name_placeholder">Data placeholder</string>
    <string name="textview_email_placeholder">Weight placeholder</string>
    <string name="textview_currency_placeholder">Height</string>
    <string name="button_add">Add</string>
    <string name="button_take_photo">Take Photo</string>
    <string name="button_cancel">Cancel</string>
    <string name="et_name">Data</string>
    <string name="et_email">Weight</string>
    <string name="et_phone">Height</string>
    <string name="add_contact">Add Report</string>
    <string name="contact_list_is_empty">Report list is empty</string>
    <string name="floatingaction">FloatingAction</string>
    <string name="image_search">search</string>
    <string name="tab_left">Chat</string>
    <string name="tab_center">Reports</string>
    <string name="tab_right">My profile</string>
    <string name="string_floatingaction">Floating Action</string>
</resources>