<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/contact_card_background"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/contact_image"
            android:layout_width="57dp"
            android:layout_height="73dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/icons8_vertical_line_64"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@drawable/icons8_vertical_line_64" />

        <TextView
            android:id="@+id/name"
            android:layout_width="143dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/textview_name_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/list_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/clearButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/contact_image"
            app:layout_constraintTop_toTopOf="@+id/contact_image" />

        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/textview_email_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/list_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="89dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/textview_currency_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/list_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/contact_image"
            app:layout_constraintEnd_toStartOf="@+id/clearButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.052" />

        <ImageButton
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/clear" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
